--- a/FabricsWebApplication/FabricsWebApplication.csproj
+++ b/FabricsWebApplication/FabricsWebApplication.csproj
@@ -39,7 +39,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FabricsFactoryMethodPattern">
+      <HintPath>..\..\FabricsFactoryMethodPattern\FabricsFactoryMethodPattern\bin\Debug\FabricsFactoryMethodPattern.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="MongoDB.Bson">
+      <HintPath>C:\Users\The\Documents\Visual Studio 2012\Projects\TTTN\CSharpDriver-2.2.3\MongoDB.Bson.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Driver">
+      <HintPath>C:\Users\The\Documents\Visual Studio 2012\Projects\TTTN\CSharpDriver-2.2.3\MongoDB.Driver.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Driver.Core">
+      <HintPath>C:\Users\The\Documents\Visual Studio 2012\Projects\TTTN\CSharpDriver-2.2.3\MongoDB.Driver.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Driver.Legacy">
+      <HintPath>C:\Users\The\Documents\Visual Studio 2012\Projects\TTTN\CSharpDriver-2.2.3\MongoDB.Driver.Legacy.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
@@ -162,6 +177,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CreateController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -281,6 +297,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
+    <Content Include="Views\Create\Create.cshtml" />
+    <Content Include="Views\Create\ViewExample.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
