--- a/FabricsWebApplication/FabricsWebApplication.csproj
+++ b/FabricsWebApplication/FabricsWebApplication.csproj
@@ -174,6 +174,7 @@
     <Compile Include="App_Start\AuthConfig.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
+    <Compile Include="ObjectIdBinder.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -301,7 +302,7 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Create\Create.cshtml" />
     <Content Include="Views\Show\ViewCustomer.cshtml" />
-    <Content Include="Views\Add\AddPrices.cshtml" />
+    <Content Include="Views\Add\AddPricesForSupplier.cshtml" />
     <Content Include="Views\Create\CreateCustomer.cshtml" />
     <Content Include="Views\Show\View1.cshtml" />
     <Content Include="Views\Add\Add.cshtml" />
@@ -314,6 +315,20 @@
     <Content Include="Views\Create\CreateFabrics.cshtml" />
     <Content Include="Views\Show\ViewFabrics.cshtml" />
     <Content Include="Views\Create\CreateFabricsColor.cshtml" />
+    <Content Include="Views\Show\ViewFabricsColor.cshtml" />
+    <Content Include="Views\Create\CreateFabricsRoll.cshtml" />
+    <Content Include="Views\Show\ViewFabricsRoll.cshtml" />
+    <Content Include="Views\Create\CreateFabricsPlots.cshtml" />
+    <Content Include="Views\Show\ViewFabricsPlots.cshtml" />
+    <Content Include="Views\Create\CreatePurchaseOrder.cshtml" />
+    <Content Include="Views\Show\ViewPurchaseOrder.cshtml" />
+    <Content Include="Views\Create\CreatePurchaseInvoice.cshtml" />
+    <Content Include="Views\Show\ViewPurchaseInvoice.cshtml" />
+    <Content Include="Views\Create\CreateWareHouse.cshtml" />
+    <Content Include="Views\Show\ViewWareHouse.cshtml" />
+    <Content Include="Views\Create\CreatePaymentForSupplier.cshtml" />
+    <Content Include="Views\Show\ViewPayment.cshtml" />
+    <Content Include="Views\Show\ViewRecord.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
